# TeaDoves-boilerplates

./: .gitignore  .pre-commit-config.yaml  DESC.md  README.md  auto_install.sh  cookiecutter.json  downloader.sh  pyproject.toml  redeploy.sh
app/: __main__.py
app/api/: main.py
app/core/: settings.py
boilerplates/: README.md
boilerplates/CythonPackage/: cookiecutter.json
boilerplates/CythonPackage/{{ cookiecutter.package_name }}/: MANIFEST.in  Makefile  setup.py
boilerplates/DDDFastApi/{{ cookiecutter.stack_name }} /: README.md
boilerplates/RawFastApi/: cookiecutter.json
boilerplates/nginx/: cookiecutter.json  default-ssl
conf.d/: README.md  server_nginx.conf  server_supervisord.conf
examples/: README.md
examples/CythonPackage/: MANIFEST.in  Makefile  setup.py
examples/CythonPackage/tests/: test_unit.py
examples/YCFastAPI/: .flake8  README.md  compile_requirements.sh  pyproject.toml
examples/YCFastAPI/backend/: .env  compile_requirements.sh  entrypoints.py  example.env  localrun.sh  pyproject.toml  requirements.txt
examples/YCFastAPI/backend/alembic/: alembic.ini  env.py
examples/YCFastAPI/backend/core/: base.py  settings.py
examples/YCFastAPI/backend/persistence/: base.py  user.py
examples/YCFastAPI/backend/presentation/: auth_utils.py  dependencies.py  logs_utils.py  main.py
examples/YCFastAPI/backend/presentation/routers/: router_app.py
examples/YCFastAPI/backend/repository/: repository_user.py
examples/YCFastAPI/backend/schemas/: base.py
examples/YCFastAPI/backend/service/: service_app.py
examples/YCFastAPI/backend/tests/: test_e2e.py
examples/YCFastAPI/backend/unit_of_work/: unit_of_work.py
examples/YCFastAPI/deployment/: README.md  deploy_config.yaml  main.tf  outputs.tf  provider.tf  terragrunt.hcl  variables.tf
examples/YCFastAPI/deployment/apigw/: main.tf  variables.tf
examples/YCFastAPI/deployment/cc/: docker-compose.tftpl  main.tf  outputs.tf  variables.tf
examples/YCFastAPI/deployment/cc/database_image/: docker-compose-local.yml  init.sql
examples/YCFastAPI/deployment/lambda_api/: main.tf  outputs.tf  variables.tf
examples/YCFastAPI/deployment/sqs/: main.tf  outputs.tf  variables.tf
examples/YCFastAPI/deployment/vpc/: main.tf  outputs.tf
examples/YCTerraform/: deploy_config.yaml  main.tf  terragrunt.hcl  variables.tf
satellites/: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
templates/: .env_tmpl  README.md  nginx_tmpl.conf  supervisord_tmpl.conf
{{ cookiecutter.project_name }}/: README.md  pyproject.toml  start.sh
{{ cookiecutter.project_name }}/app/: __main__.py
{{ cookiecutter.project_name }}/app/api/: main.py  models.py
{{ cookiecutter.project_name }}/app/core/: settings.py
{{ cookiecutter.project_name }}/conf.d/: supervisord.conf  {{ cookiecutter.env_filename }}
{{ cookiecutter.project_slug }}/: README.md  pyproject.toml  setup.sh  start.sh
{{ cookiecutter.project_slug }}/conf.d/: README.md  {{ cookiecutter.env_filename }}
(+63 files in other folders)
