[tool.poetry]
name = "backend-service"
version = "0.1.0"
description = ""
authors = ["Peter Ibragimov"]

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = {extras = ["standard"], version = "^0.18.2"}
fastapi = "^0.79.0"
SQLAlchemy = {extras = ["asyncio"], version = "^1.4.40"}
ujson = "^4.3.0"
mangum = "^0.15.1"
aws-lambda-powertools = "^1.28.0"
structlog = "^22.1.0"
asyncpg = "^0.26.0"
greenlet = "^1.1.3"
aiohttp = "^3.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
profile = "black"
multi_line_output=3
include_trailing_comma = true
default_section = "FIRSTPARTY"
known_third_party = ["shapely", "dependency_injector","cache","structlog","tenacity","dependency_injector","phonenumbers",
    "phone_iso3166","boto3","botocore","aws_xray_sdk","rediscluster","geopy","starlette","aiobotocore","aioboto3",
    "aws_lambda_powertools","aws-xray-sdk","awsiotsdk","alembic","sqlalchemy","geoalchemy2","aredis","redis",
    "psycopg2","asyncpg","pynamodb","backoff","requests","aiohttp","uvloop","fastapi","mangum","jwt",
    "slackclient","celery","uvicorn","cachetools","locust","typer","aiogram","humps","pydantic","pytz",
    "ujson","returns","loguru","tqdm","pytz"]
sections = ["STDLIB","THIRDPARTY","FIRSTPARTY","LOCALFOLDER"]
[tool.black]
line-length = 120
target-version = ['py39']
